test/classes/initializers/errors/errHandling/initWithTryBang2.bad
uncaught Error: 
  initWithTryBang2.chpl:14: thrown here
  initWithTryBang2.chpl:17: uncaught here
